# PBL5

./: .gitignore  CGAN.ipynb  CGAN_tensor.ipynb  CGAN_tensor.py  README.md  Untitled.ipynb  augmentation.ipynb  augmentation.py  bar_plot.py  cgan_models.py  cgan_train.py  cgan_utils.py  constants.py  data_utils.py  main.ipynb  main.py  plot_utils.py  pyproject.toml  sample_gan.ipynb  t_test.py  yolo_utils.py
.ipynb_checkpoints/: main-checkpoint.ipynb  sample_gan-checkpoint.ipynb
CGAN_result/: discriminator.keras
CGAN_result/2025_06_20_00_33_44/: basic_info.csv  discriminator.keras
GACN_result/2025-06-15 18:09:35.817330/: basic_info.csv
GACN_result/2025-06-15 18:31:16.685491/: basic_info.csv
GACN_result/2025-06-15 18:50:05.140026/: basic_info.csv
GACN_result/2025-06-15 19:02:38.531548/: loss.csv
GACN_result/2025-06-15 19:28:33.209432/: basic_info.csv
GACN_result/2025-06-15 19:49:02.332579/: basic_info.csv
GACN_result/2025-06-15 19:53:33.682666/: basic_info.csv
GACN_result/2025-06-15 19:59:34.164369/: basic_info.csv  loss.csv
GACN_result/2025-06-15 20:02:39.415028/: loss.csv
GACN_result/2025-06-15 20:05:37.998740/: basic_info.csv
GACN_result/2025-06-15 20:07:34.702305/: basic_info.csv  loss.csv
GACN_result/2025-06-15 20:12:24.001635/: loss.csv
IP102/: data.yaml
config/: params.py  paths.py
result/: 2025-05-29 13:54:31.108198pred.csv  2025-05-29 13:54:31.108198true.csv  2025-05-29 14:54:36.280208pred.csv  2025-05-29 14:54:36.280208true.csv  2025-05-29 16:38:20.854592pred.csv  2025-05-29 16:38:20.854592true.csv
(+1005 files in other folders)
