[project]
name = "pbl5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "numpy==1.26.4",
    "scikit-learn>=1.6.1",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "ultralytics>=8.3.134",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
